tests/rosetta/out/Smalltalk/algebraic-data-types.out
/tmp/algebraic-data-types.st:76: parse error, expected ']'
